--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,15 +1,15 @@
 name: data_warehouse_dbt
-version: '1.0'
+version: "1.0"
 config-version: 2
 
 profile: my_azure_project
 
-model-paths: ['models']
-seed-paths: ['seeds']
-analysis-paths: ['analyses']
-test-paths: ['tests']
-macro-paths: ['macros']
-snapshot-paths: ['snapshots']
+model-paths: ["models"]
+seed-paths: ["seeds"]
+analysis-paths: ["analyses"]
+test-paths: ["tests"]
+macro-paths: ["macros"]
+snapshot-paths: ["snapshots"]
 
 # Model configurations per layer
 models:
@@ -21,7 +21,7 @@ models:
       +schema: gold
       +materialized: view
 
-# Seed configurations (your raw CSVs land in bronze schema)
+# Seed configurations (raw CSVs land in bronze schema)
 seeds:
   data_warehouse_dbt:
     +schema: bronze
